refactor(config): تحسين مسارات التضمين في tsconfig وإزالة الأسماء المستعارة
تم تبسيط ملف tsconfig.json الجذري عن طريق إزالة إعدادات `baseUrl` و `paths` التي لم تعد ضرورية.

بالإضافة إلى ذلك، تم جعل مسارات `include` أكثر تحديدًا لتستهدف مجلدات `src` بشكل مباشر. هذا يضمن أن ملفات المصدر فقط هي التي يتم تضمينها في عملية التحويل البرمجي، مما يحسن من سلامة البناء.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,12 @@
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "dist",
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./*"]
-    }
+    "outDir": "dist"
   },
-  "include": ["apps", "packages", "scripts"],
+  "include": [
+    "apps/*/src",
+    "packages/*/src",
+    "scripts/**/*.ts"
+  ],
   "exclude": ["node_modules", "dist"]
 }
