feat(reporting): add JSON and HTML report generation
Adds new reporting capabilities to the analysis pipeline, allowing users to export results in JSON and HTML formats.

The new `generateJsonReport` function saves the complete output from all pipeline stages into a single, detailed JSON file. This is useful for debugging and downstream programmatic use.

The `generateHtmlReport` function creates a simple HTML page containing a summary table of the analysis and a Vega-Lite chart that visualizes sentiment across scenes.

The main pipeline CLI has been updated with `--export-json` and `--export-html` flags to enable these new formats. The script is also now executable via the `bin` field in `package.json`.

--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "description": "Web application pipeline for pre-production screenplay analysis (Arabic/RTL ready).",
+  "bin": {
+    "analyze-script": "./scripts/run-pipeline.ts"
+  },
   "scripts": {
     "dev:api": "pnpm --filter api exec tsx src/server.ts",
     "dev:worker": "pnpm --filter worker exec tsx src/worker.ts",
-    "e2e": "pnpm tsx scripts/run-pipeline.ts --config configs/defaults.ts --input data/input/sample.txt --export-pdf --export-csv",
+    "e2e": "pnpm tsx scripts/run-pipeline.ts --config configs/defaults.ts --input data/input/sample.txt --export-json --export-html --export-pdf --export-csv",
     "db:generate": "prisma generate --schema ./prisma/schema.prisma",
     "db:push": "prisma db push --schema ./prisma/schema.prisma",
     "db:migrate": "prisma migrate dev --name init --schema ./prisma/schema.prisma",
